
 o BUGFIX C-XmlRpc: Added missing ping(), reported by
   Dominique.Petitpierre@adm.unige.ch 

 o Added basic support to connect to xmlBlaster from
   simple C with SOCKET protocol, see
   xmlBlaster/demo/c/socket/README

 o Changed socket protocol parser to be more tolerant
   on partial messages (needed for C SOCKET client).
   This change is backward compatible.

Changes for 0.847 [12, May 2003]
================================

 o Michele Laghi added a graphic chat demo using xmlBlaster.
   It can be used for example to discuss designs and the
   remote participants drawings are instantly copied to the other
   users. See xmlBlaster/demo/javaclients/graphical/README

 o Added Martin's managed objects in the c++ clients 

 o Java client library interface change, removed method
   boolean disconnect(DisconnectQos disconnectQos, boolean clearClientQueue, boolean shutdown, boolean shutdownCb) 
   Please configure the options in DisconnectQos and use disconnect(DisconnectQos)

 o BUGFIX in java client library. If the client side tail back queue contains
   persistent entries on disconnect they are kept and resent on new connection
   of the same client (same pubSessionId).
   http://www.xmlblaster.org/xmlBlaster/doc/requirements/interface.disconnect.html

 o Merged basic JMX support from branch jmx_gui

 o BUGFIX: PersistentStore and PersistentQueue have now separate pools. Avoids
   deadlocks when configured with only 1 connection AND msg store AND
   other queues are peeking objects from persistence (for example when both caching).

 o JdbcConnectionPool works now with wait/notify instead of sleep/interrupt

 o Better exception handling in JdbcManagerCommonTable to catch even 
   throwables

 o BUGFIX: Fixed subject id to be without public sessionId in all cases.
   Had severe impact on PtP messages as subject queue name was sometimes
   identical to session queue name.

 o Fixed memory leak in JDBC layer (clear SQLWarnings)