@@ -9,6 +9,7 @@ import org.xmlBlaster.util.enum.MethodName;
 import org.xmlBlaster.util.enum.ErrorCode;
 import org.xmlBlaster.util.MsgUnitRaw;
 import org.jutils.log.LogChannel;
+import org.xmlBlaster.util.enum.MethodName;
 
 
 /**
@@ -157,11 +158,12 @@ public class Session implements I_Session, I_Subject {
     * decrypt, check, unseal ... an incomming message
     * <p/>
     * @param MsgUnitRaw The the received message
+    * @param MethodName The name of the method which is intercepted
     * @return MsgUnitRaw The original message
     * @exception XmlBlasterException Thrown i.e. if the message has been modified
     * @see #importMessage(MsgUnitRaw)
     */
-   public MsgUnitRaw importMessage(MsgUnitRaw msg) throws XmlBlasterException {
+   public MsgUnitRaw importMessage(MsgUnitRaw msg, MethodName action) throws XmlBlasterException {
       // dummy implementation
       return msg;
    }
