@@ -7,6 +7,7 @@ import org.xmlBlaster.util.MsgUnitRaw;
 import org.xmlBlaster.authentication.plugins.I_ClientPlugin;
 import org.xmlBlaster.authentication.plugins.I_SecurityQos;
 import org.xmlBlaster.authentication.plugins.simple.SecurityQos;
+import org.xmlBlaster.util.enum.MethodName;
 
 /**
  * Helper only for Java clients. 
@@ -62,11 +63,12 @@ public class ClientPlugin implements I_ClientPlugin {
     * decrypt, check, unseal ... an incomming message
     * <p/>
     * @param MsgUnitRaw The the received message
+    * @param MethodName The name of the method which is intercepted
     * @return MsgUnitRaw The original message
     * @exception XmlBlasterException Thrown i.e. if the message has been modified
     * @see #importMessage(String)
     */
-   public MsgUnitRaw importMessage(MsgUnitRaw msg) throws XmlBlasterException
+   public MsgUnitRaw importMessage(MsgUnitRaw msg, MethodName action) throws XmlBlasterException
    {
       return msg;
    }
